- Added packed mud, created by piston packing two mud blocks.
- Added mud brick, created with 4 packed mud in a crafting grid, along with associated sub blocks.
- Added new wood types: mahogany, mangrove, hazel
    - For the purposes of smelting and tanning:
        - Mahogany and mangrove are equivalent to jungle
        - Hazel is equivalent to oak
- Changed sapling recipes:
    - All sapling recipes can use either dung or fertilizer, and are performed in a cauldron.
    - Cherry saplings now require an oak sapling, pink dye, and a fertilizer.
    - Acacia saplings now require a birch sapling, orange dye, and a fertilizer.
    - Mahogany saplings require a jungle sapling, red dye, and a fertilizer.
    - Mangrove saplings require a jungle sapling, orange dye, and a fertilizer.
    - Hazel saplings require an oak sapling, brown dye, and a fertilizer.
- Changed deco stone variants to behave consistently with BTW stone.
    - Granite, andesite, and diorite are all considered first strata.
    - Slate is considered third strata.
- Changed how lanterns render, and added item equivalents. The old blocks may be converted into items in a crafting grid.
- Changed lanterns to break when underwater.
- Changed wrought iron bars and paper walls to output more when crafting.
- Changed red sand (blocks and piles) to be a subtype of regular sand. Old red sand may be converted into new red sand in a crafting grid.
- Changed red sand to be crafted with 8 sand and 1 red dye to make 8.
- Changed the recipe for coarse dirt to produce 2.
- Changed the recipe for podzol to be 8 coarse dirt and a spruce leaf block to make 8.
- Changed the recipe for empty bottle racks to use an 'I' shape instead of an 'X' (high efficiency recipe uses siding on top and bottom and moulding everywhere else).
- Changed the names of flower textures to be more descriptive.
- Changed magma to be made by heating netherrack in a kiln, and removed superheated netherrack.