@@ -19,7 +19,7 @@ public class AcaciaSaplingBlock extends DecoSaplingBlock {
 	}
 	
 	@Override
-	public boolean generateTree(World world, Random rand, int x, int y, int z) {
+	public boolean generateTree(World world, Random rand, int x, int y, int z, int treeType) {
 		int baseHeight = 4 + rand.nextInt(3);
 		
 		//Base tree
@@ -108,12 +108,12 @@ public class AcaciaSaplingBlock extends DecoSaplingBlock {
 	}
 	
 	@Override
-	public int getLogID() {
+	public int getLogID(int type) {
 		return DecoBlocks.acaciaLog.blockID;
 	}
 	
 	@Override
-	public int getStumpID() {
+	public int getStumpID(int type) {
 		return DecoBlocks.acaciaStump.blockID;
 	}
 	
